--- a/dash/index.html
+++ b/dash/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Autoraid</title>
 </head>
-<body>    
+<body>
+    <button type="button">Start</button>    
 </body>
 <script src="index.ts" type="application/javascript"></script>
 </html>
